styles.css
@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Poppins&display=swap');

html{
  scroll-behavior:smooth
}

/* General Reset */
body, h1, h2, ul, p {
  margin: 0;
  padding: 0;
  font-size: 10px;
}

a {
    text-decoration: none;
}


.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family: Poppins;
}

/* Navigation */
nav {
  top: 0;
  width: 100%;
}

nav ul {  
  background-color: #E4B845;
  color: #101014;
  list-style: none;
  padding: 15px;
  display: flex;
  justify-content: space-around;
}

nav ul li a {
  color: #101014;
  font-size: 1.5rem;
}

/* Hero Section */
#splash {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 3rem 0;
  background-image: url('./img/perch4.jpg');
  background-position: center;
  background-size: cover;
  height: 50vh;
}

.splashText {
  font-family: 'Caprasimo', cursive;
  font-size: 9rem;
  text-shadow:
  -1px -1px 0 #fff,
   0   -1px 0 #fff,
   1px -1px 0 #fff,
   1px  0   0 #fff,
   1px  1px 0 #fff,
   0    1px 0 #fff,
  -1px  1px 0 #fff,
  -1px  0   0 #fff;
}

.logo {
  height: 75px;
  width: 100px;
}


.CTA {
  margin: 20px;
  padding: 20px;
  font-size: 1.5rem;
}

.CTAHeader {
  font-size: 5.3rem;
}

.CTAText {
  font-size: 1.4rem;
  color: #101014;
}



/* Main Section */

.main {
  background-color: #fdf8df;
}

.block {
  border: 6px solid #101014;
  color: #101014;
  margin: 20px;
  padding: 20px;
  font-size: 1.5rem;
}

.blockHeader { 
  font-size: 2.3rem;
  color: #101014;
  margin-bottom: 1rem;
}

.blockText {
  font-size: 1.4rem;
  color: #101014;
}

.blockTextBullet {
  font-size: 1.5rem;
  margin-left: 2rem;
}

.sectionHeader {
  font-size: 5rem;
  font-family: 'Caprasimo', cursive;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 1rem;
  margin-bottom: 3rem;
}

#splash2 {
  background-image: url('./img/perch2.jpg');
}

#splash3 {
  background-image: url('./img/perch3.jpg');
}

#splash2, #splash3 {
  position: relative;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  background-size: 125%;
  height:100vh;
}



#services {
  padding: 4rem;
}

.servicesTiles {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 10px;
}

/* events */
#events {
  display: flex;
  justify-content: center;
  flex-direction: column;
  background-color: #E4B845;
  padding: 4rem;
}

.eventGroup {
  display: flex;
  flex-direction: column;
}

.event {
  border: 1rem solid #101014;
  margin: 1rem 0;
}

.eventHeader {
  display: flex;  
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  padding: 0 1rem;
}

.eventFlyer {
  height: 30rem;
  width: auto;
}


.eventTitle {
  background-color: #101014;
  color: #fdf8df;
  font-size: 4.2rem;
  font-weight: bold;
  padding: 1rem;
}

.eventDate {
  background-color: #101014;
  color: #fdf8df;
  font-size: 2rem;
}

.eventDescription {
  display: flex;
  flex-direction: column;
  color: #101014;
  margin: 2rem;
  padding: 0 3rem;
  font-size: 5rem;
}

.eventDescriptionText {
  font-size: 2rem;
  margin-bottom: 1rem;
}

.signUpBtn {
  background-color: #99d89e;
  color:#101014;
  height: 8rem;
  width: 20rem;
  font-size: 4rem;
  border: .3rem solid #101014;
}

#hoursAndLocation {
  background-color: #99d89e;
  padding: 4rem;
}

.hoursAndLocationTiles {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 10px;
}

.hours {
  margin: 20px;
  padding: 20px;
  font-size: 1.5rem;
}

.hoursText {
  font-size: 2.5rem;
  color: #101014;
}

.location {
  margin: 20px;
  padding: 20px;
  font-size: 1.5rem;
}

/* Contact */
.contact {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #fdf8df;
  color: #101014;
  padding: 3rem;
  height: 30vh;
}

.getInTouch {
 font-size: 2rem;  
}

.getInTouchHeader {
    font-size: 5rem;
    font-family: 'Caprasimo';
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
}

.contactOptions {
    display: flex;
    flex-direction: column;
    justify-content: center;
    list-style: none;
    font-size: 1.6rem;
}

.contactOption {
    display: flex;
    align-items: center;
    font-size: 2rem;
    
}

.igLogo {
    width: 2rem;
    height: 2rem;
    margin-right: .6rem;
}

.returns {
  display: flex;
  flex-direction: column;
  padding: .5rem 7rem;
  background-color: #E4B845;
  color: #101014;
  
}

.returnsHeader {
  font-size: 2rem;
  margin-bottom: 1rem;
}

.returnsText {
  font-size: 1.3rem;
  margin-bottom: .5rem;
}



@media only screen and (max-width: 3000px) and (min-width: 1275px){
  /* .container {
    border: 5px solid green;
  } */

}

@media only screen and (max-width: 1274px) and (min-width: 1150px){
  /* .container {
    border: 5px solid red;
  } */

  #services {
    padding: 1rem;
  }

  .servicesTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 4px;
  }

  .blockHeader {
    font-size: 2rem;
  }

  .blockText {
    font-size: 1.1rem;
  }

  .contact {
    padding: .5rem;
  }
}

@media only screen and (max-width: 1149px) and (min-width: 950px){
  /* .container {
    border: 5px solid blue;
  } */

  .sectionHeader {
    font-size: 3rem;
  }

  #services {
    padding: 1rem;
  }

  .servicesTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 4px;
  }

  .blockHeader {
    font-size: 2rem;
  }

  .blockText {
    font-size: 1.1rem;
  }

  .eventHeader {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .eventTitle {
    font-size: 2.5rem;
  }

  .eventDescription {
    margin: 1rem;
    padding: 0;
  }

  .eventDescriptionText {
    font-size: 1.5rem;
  }

  .hoursText {
    font-size: 1.5rem;
  }

  .location {
    margin: 5px;
    padding: 5px;
    font-size: 1.5rem;
  }

  .getInTouchHeader {
    font-size: 3rem;
  }

  .contact {
    padding: 4px;
  }
}

@media only screen and (max-width: 949px) and (min-width: 600px){
  .container {
    border: 3px solid pink;
    width: 100vw;
  }

  .splashText {
    font-size: 4rem;
  }

  .CTAHeader {
    font-size: 3rem;    
  }

  nav {
    display: none;
  }

  .sectionHeader {
    font-size: 3rem;
    justify-content: flex-start;
    align-items: flex-start;
  }

  #services {
    padding: 1rem;
  }

  .servicesTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 4px;
    
  }

  .blockHeader {
    font-size: 2rem;
  }

  .blockText {
    font-size: 1.1rem;
  }

  
  .eventHeader {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0;
  }

  .eventTitle {
    font-size: 1.5rem;
  }

  .eventFlyer {
    height: 15rem;
    width: auto;
  }

  .eventDescription {
    margin: 1rem;
    padding: 0;
  }

  .eventDescriptionText {
    font-size: 1.1rem;
  }

  .eventDate {
    font-size: .8rem;
  }

  .signUpBtn {
    height: 5rem;
    width: 14rem;
    font-size: 1.5rem;
    background-color: blue;
  }

  
  .hoursAndLocationTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 10px;
  } 

  .hours {
    margin: 0;
    padding: .5rem;
    font-size: 1.2rem;
  }

  .hoursText {
    font-size: 1.2rem;
  }


  .location {
    font-size: 3rem;
    margin: 2rem 0 0 0;
    padding: .5rem;
  }

  .contact {
    flex-direction: column;
    height: auto;
  }

  .getInTouchHeader {
    font-size: 3rem;
    padding: 0;
  }

  .returns {
    padding: 1rem;
  }
}

@media only screen and (max-width: 599px) and (min-width:320px){
  .container {
    /* border: 5px solid purple; */
    width: 100vw;
  }

  nav ul {
    display: none;
  }

  .CTA {
    padding: 0;
  }

  .CTAHeader {
    font-size: 2rem !important;
  }

  .splashText {
    font-size: 3rem;
  }

  .CTAHeader {
    font-size: 1rem;    
  }

  #splash2, #splash3 {
    position: relative;
    background-attachment: fixed;
    background-position: bottom;
    background-size: cover;
    background-size: 300%;
    height:80vh;
  }

  .sectionHeader {
    font-size: 2.8rem;
    justify-content: flex-start;
    align-items: flex-start;
    margin-bottom: 1rem;
  }

  #services {
    padding: .2rem;
    margin: 0;
  }

  .servicesTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 4px;    
  }

  .blockHeader {
    font-size: 1.2rem;
  }

  .blockText {
    font-size: 1rem;
  }

  .blockTextBullet {
    font-size: 1rem;
  }

  #events {
    padding: 0;
    overflow: scroll;
    white-space: pre-line;
    overflow-wrap: break-word;
  }

  .eventHeader {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0;
  }

  .event {
    margin: 0;
    padding: 0;
  }

  .eventTitle {
    font-size: 1.5rem;
    padding: none;
    margin: none;
  }

  .eventFlyer {
    height: 0;
    width: 0;
    display: none;
  }

  .eventDescription {
    margin: 1rem;
    padding: 0;
  }

  .eventDescriptionText {
    font-size: 1.1rem;
  }

  .eventDate {
    font-size: .8rem;
  }

  .signUpBtn {
    height: 5rem;
    width: 14rem;
    font-size: 1.5rem;
    background-color: red;
  }

  #hoursAndLocation {
    padding: 0;
  }
  
  .hoursAndLocationTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 10px;
  } 

  .hours {
    margin: 0;
    /* padding: .5rem; */
    font-size: 1.2rem;
  }

  .hoursText {
    font-size: 1.2rem;
  }

  .location {
    font-size: 1.2rem;
    /* padding: 8px; */
    margin: 0;
  }

  .gmap_canvas {
    margin: 0;
    padding: 0;
    height: 35rem;
  }

  .iframe-rwd  {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    }
    .iframe-rwd iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    }
    
    .getInTouchHeader {
      font-size: 3rem;
      padding: 0;
    }

  .contact {
    flex-direction: column;
    height: auto;
  }

  .contactOption {
    font-size: .8rem;
  }

  .igLogo {
    height: 1rem;
    width: 1rem;
  }

  .returns {
    padding: 1rem;
  }

  .returnsText {
    font-size: 1rem;
  }
}





  /* #services {
    padding: 1rem;
  }

  .servicesTiles {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 10px;
  }

  .blockHeader {
    font-size: 2rem;
  }

  .blockText {
    font-size: 1.1rem;
  } */


/* media queries: 1220 */

